--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-________________________________
-|                              |
-|        THOMAS STEVEN         |
-|     XXXXXXXXXX Developer     |
-|                              |
-|  Wow! You found my business  |
-|    card. Congratulations!    |
-|                              |
-| https://tomontheinternet.com |
-|______________________________|
+______________________________________________________________________
+|                                                                    |
+|  ░▀▀█▀▀░█░░░░▄▀▀▄░█▀▄▀█░█▀▀▄░█▀▀░░░▒█▀▀▀█░▀█▀░█▀▀░▄░░░▄░█▀▀░█▀▀▄   |
+|  ░░▒█░░░█▀▀█░█░░█░█░▀░█░█▄▄█░▀▀▄░░░░▀▀▀▄▄░░█░░█▀▀░░█▄█░░█▀▀░█░▒█   |
+|  ░░▒█░░░▀░░▀░░▀▀░░▀░░▒▀░▀░░▀░▀▀▀░░░▒█▄▄▄█░░▀░░▀▀▀░░░▀░░░▀▀▀░▀░░▀   |
+|                                                                    |
+|                        XXXXXXXXXX Developer                        |
+|                                                                    |
+|         Wow! You found my business card. Congratulations!          |
+|                                                                    |
+|                    https://tomontheinternet.com                    |
+|____________________________________________________________________|
+
