--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ ______________________________________________________________________
 |  ░░▒█░░░█▀▀█░█░░█░█░▀░█░█▄▄█░▀▀▄░░░░▀▀▀▄▄░░█░░█▀▀░░█▄█░░█▀▀░█░▒█   |
 |  ░░▒█░░░▀░░▀░░▀▀░░▀░░▒▀░▀░░▀░▀▀▀░░░▒█▄▄▄█░░▀░░▀▀▀░░░▀░░░▀▀▀░▀░░▀   |
 |                                                                    |
-|                        XXXXXXXXXX Developer                        |
+|                       A Very Nice Developer                        |
 |                                                                    |
 |         Wow! You found my business card. Congratulations!          |
 |                                                                    |
